
              libnetpbm: make all row free operations go through
              pm_freerow(); change row buffer type from char * to void *
              for pm_allocrow(), pm_freerow().

              set _XOPEN_SOURCE=600 so jpeg2ktopam and pamtojpeg2k
              compile on AIX (_XOPEN_SOURCE=500 keeps int_fast32_t from
              being defined).

              Fix bug: ppmdraw.h, ppmdfont.h not installed.

              package, install: install interface header files as
              <netpbm/xxx.h> instead of just <xxx.h>.

07.09.26 BJH  Release 10.40.00

              pamfunc: Add -andmask, -ormask, -xormask, -not,
              -shiftleft, -shiftright.

              pbmtonokia: fail if input is > 255 x 255.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pnmmargin: add -plain option.    Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pnmgamma: improve error messages.

              pamstack: accept Standard Input properly.

              pnmmargin: recognize invalid options better.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              anytopnm, pnmmargin, pamstretch-gen, ppmquantall: fix
              small temporary file security exposure.

              pnmtopalm: fix typo in error message.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pnmtops: fix crash when program attempts to write 12 bits per
              sample Postscript.  It doesn't really know how to do that, so
              now it just writes 8 unless you do -psfilter.

              pnmtopng: Sort palette properly when alpha maxval != 255.

              pnmtopng: Fix array bound violation with = 256 colors and -alpha.

              pnmtopng: Fix array bound violation with > 256 alpha mask levels.

              pamtopfm: Fix wrong selection of default endianness.

              libnetpbm: Add pm_system_lp(), pm_system_vp().
